# haskell-semantics

./: README.md
semantics/: haskell-desugaring-helpers.k  haskell-desugaring-test.k  haskell-desugaring.k  haskell-syntax-structs.k  haskell-syntax-test.k  haskell-syntax.k  visitor.k
tests/: Jon.hs  README  clunky.hs  collatz.hs  factor.hs  factorial.hs  generic-take.hs  list-monad.hs  mandelbrot.hs  num-literals.hs  operator.hs  patbind1.hs  patbind2.hs  pe1.hs  pe16.hs  pe2.hs  pe29.hs  quine1.hs  quine2.hs  quine3.hs  tree.hs  where1.hs  where2.hs  where3.hs  yell.hs
tools/: desugar  runtests
tools/generic-k/: generic-k.cabal
tools/generic-k/Data/Generics/: K.hs
tools/generic-k/Data/Generics/K/: FromK.hs  ToK.hs
tools/semantics-pipeline/: semantics-pipeline.cabal
tools/semantics-pipeline/src/: hs2k.hs  k2hs.hs
