Name:               generic-k
Version:            0.1.2
Synopsis:           Lower and raise Haskell values into and out of the K semantic framework
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         lazar6@illinois.edu
Category:           Data
Build-type:         Simple
Cabal-version:      >=1.2

Library
  Exposed-modules:
    Data.Generics.K
    Data.Generics.K.ToK
    Data.Generics.K.FromK

  Build-depends: base >= 4 && < 5, syb, language-k >= 0.2.0, haskell-src-exts
